Fri Oct  8 12:31:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/LocalityManager/Scheduler/Events/Passivate.cpp:
          Fixed incorrect logging

Fri Oct  8 11:44:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/DAnCE_DeploymentInterceptors.idl:
        * dance/DAnCE_DeploymentInterceptors_Base_Impl.h:
        * dance/DAnCE_DeploymentInterceptors_Base_Impl.cpp:
        * dance/LocalityManager/Daemon/Locality_Manager_Impl.h:
        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * dance/LocalityManager/Scheduler/Deployment_Scheduler.cpp:
        * dance/LocalityManager/Scheduler/Events/Disconnect.h:
        * dance/LocalityManager/Scheduler/Events/Disconnect.cpp:
        * dance/LocalityManager/Scheduler/Scheduler.mpc:
          Some starter code to let DAnCE also disconnect all connections in
          the plan at shutdown, this code is currently not called

Thu Oct  7 10:59:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * COPYING:
          Small fix

        * dance/LocalityManager/Daemon/Locality_Manager_Task.cpp:
          Layout changes

        * dance/LocalityManager/Handler/Plugin_Conf.cpp:
          Fixed memory leak coming from ACE_Read_Buffer::rec_read

Mon Oct  4 14:29:30 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/LocalityManager/ExplicitExec/ExplicitExec.mpc:

          Removed dependency on CIAO Deployment handlers.

Fri Oct  1 16:00:51 UTC 2010  William Otte  <wotte@zifnab>

        * COPYING:

          Updated to include DAnCE.

Fri Oct  1 14:29:46 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE-INSTALL.html:
          DAnCE install instructions.

Fri Oct  1 10:51:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE_TAO.mwc:
          Removed projects we don't use in DAnCE

Wed Sep 29 18:37:07 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dance/LocalityManager/Daemon/Locality_Manager.mpc: